# GDPixelLoader

./: CMakeLists.txt  gdPixelLoader.cpp  gdPixelLoader.hpp  main.cpp  pixelLoader.cpp  pixelLoader.hpp
gdloader/: gdPixelLoader.cpp  gdPixelLoader.hpp
